tests/miz/fail/types/fail_type_elaboration_imported_attribute_assertion_formula_gap_001.miz
import parser.type_fixtures;
theorem ImportedAttributeAssertionPayloadBoundary: 1 is empty;
